# test-ingestion-infra

./: README.md  app.py  cdk.json  noxfile.py  pyproject.toml
test_ingestion_infra/: my_app_stack.py  my_app_stage.py  pipeline_ci_cd.py  utils.py
test_ingestion_infra/.notebooks/: test_notebook.ipynb
test_ingestion_infra/my_first_cdk_app/: consumer_stack.py  producer_stack.py
tests/unit/: test_test_ingestion_infra_stack.py  test_utils.py
